--- a/webapp/static/css/index.css
+++ b/webapp/static/css/index.css
@@ -11,14 +11,16 @@
 
 .title {
     font-weight: 500;
+    text-align: center;
     color: #000000;
     font-size: 44px;
     margin: 50px 32px;
 }
 
 .desc {
-    font-size: 28px;
+    font-size: 24px;
     font-weight: 400;
+    text-align: center;
     color: #888888;
     margin: 32px;
 }
@@ -51,6 +53,7 @@
 
 .choose {
     margin: 80px auto;
+    text-align: center;
 }
 
 .join {
